hydra-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-cluster-ip-service
spec:
  type: ClusterIP
  selector:
      component: hydra
  ports:
    - port: 4444
      targetPort: 4444
      name: public-port
    - port: 4445
      targetPort: 4445
      name: admin-port
    - port: 5555
      targetPort: 5555
      name: token-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hydra
  template:
    metadata:
      labels:
        component: hydra
    spec:
      containers:
        - name: hydra
          image: oryd/hydra:v1.4.2
          ports:
            - containerPort: 4444
            - containerPort: 4445
            - containerPort: 5555
          command:
            - "hydra"
            - "serve"
            - "all"
            - "--dangerous-force-http"
