reaction-server-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: reaction-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reaction-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:  
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: cygnetops/multi-server-pgfix-5-11
          ports:
            - containerPort: 3000
